tests/modules-second-class.stderr
error[E023]: module used as if it was a value
  > ${DIRECTORY}/modules-second-class.lushui:5:14
  |
5 | r0: RECORD = am-i-a-record
  |              ^^^^^^^^^^^^^ 

error[E023]: module used as if it was a value
   > ${DIRECTORY}/modules-second-class.lushui:10:28
   |
10 | r1: RECORD = am-i-a-record.am-i-a-record-too
   |                            ^^^^^^^^^^^^^^^^^ 

error[E021]: binding `ANOTHER-RECORD` is not defined in this scope
   > ${DIRECTORY}/modules-second-class.lushui:14:5
   |
14 | r2: ANOTHER-RECORD = am-i-a-record-too
   |     ^^^^^^^^^^^^^^ 

error[E023]: module used as if it was a value
   > ${DIRECTORY}/modules-second-class.lushui:14:22
   |
14 | r2: ANOTHER-RECORD = am-i-a-record-too
   |                      ^^^^^^^^^^^^^^^^^ 

error: aborting due to 4 previous errors

